# apolaki-rs

./: .gitignore  Cargo.toml
canvas/: Cargo.toml
canvas/src/: canvas.rs  lib.rs
color/: Cargo.toml
color/src/: color.rs  lib.rs
libs/canvas/: Cargo.toml
libs/canvas/src/: canvas.rs  lib.rs
libs/color/src/: color.rs  lib.rs
libs/light/: Cargo.toml
libs/light/src/: light.rs
libs/material/: Cargo.toml
libs/material/src/: lib.rs  material.rs
libs/matrix/: Cargo.toml
libs/matrix/src/: lib.rs  matrix.rs
libs/objects/: Cargo.toml
libs/objects/src/: intersect.rs  lib.rs  sphere.rs
libs/ray/: Cargo.toml
libs/ray/src/: lib.rs
libs/transform/: Cargo.toml
libs/transform/src/: lib.rs
libs/tuple/: Cargo.toml
libs/tuple/src/: lib.rs  tuple.rs
libs/world/: Cargo.toml
libs/world/src/: lib.rs
matrix/: Cargo.toml
matrix/src/: lib.rs  matrix.rs
pit/ch5/src/: main.rs
pit/ch6/: Cargo.toml
pit/ch6/src/: main.rs
src/: lib.rs
tuple/src/: lib.rs  tuple.rs
