[package]
name = "apolaki_objects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apolaki_ray = { path = "../ray" }
apolaki_tuple = { path = "../tuple" }
apolaki_matrix = { path = "../matrix" }
apolaki_transform = { path = "../transform" }